sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: value enOrdre
  enOrdre = true ;
  ^AlgCocktailSort1:4: error: not found: value enOrdre
  while (enOrdre){
         ^AlgCocktailSort1:5: error: not found: value enOrdre
    enOrdre = false ;
    ^AlgCocktailSort1:10: error: not found: value enOrdre
      enOrdre = true ;
      ^AlgCocktailSort1:17: error: not found: value enOrdre
    enOrdre = true ;
    ^